# CivicOps-AI-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  data_seed.py  db.py  main.py  models.py  schemas.py
app/core/: config.py
app/services/: __init__.py  agent.py  eval.py  mock_api.py  rag.py  sql_tool.py
data/policies/: budget_monitoring_playbook.md  complaint_sla_policy.md  data_quality_policy.md  satudata_governance.md
docs/: README.md  agent_response_guidelines.md  architecture.md  demo_questions.md  demo_video_script.md  deployment.md
static/: app.js  index.html  styles.css
tests/: test_agent.py  test_api.py  test_sql_tool.py
