[project]
name = "satudata-ops-agent"
version = "0.1.0"
description = "Portfolio MVP: multi-agent AI assistant over SQL, documents, logs, and mock APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "openai>=1.58.0",
    "llama-index>=0.11.0",
    "llama-index-vector-stores-chroma>=0.2.0",
    "llama-index-embeddings-openai>=0.2.5",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]
